--- a/projects/swipe-angular-list-rtl/src/lib/item-list/item-list.component.html
+++ b/projects/swipe-angular-list-rtl/src/lib/item-list/item-list.component.html
@@ -45,6 +45,6 @@
       </div>
 
     </div>
-    <div class="mark" class="{{rtl && rtl == true? 'rtl' : ''}}"></div>
+    <div class="mark" style ="--value: {{markColor}}" class="{{rtl && rtl == true? 'rtl' : ''}}"></div>
   </div>
 </div>
